exports[`test the round add button matches the snapshot 1`] = `
<button
  aria-label="Add"
  className="jjZOyd">
  ButtonValue
</button>
`;

exports[`test the round add button with button type given matches the snapshot 1`] = `
<button
  aria-label="Add"
  className="jjZOyd"
  type="button">
  ButtonValue
</button>
`;
